MicroTodoUI/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-tasks-ingress
spec:
  ingressclassname : nginx
  rules:
  - host: frontend-tasks.cptiwari.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/
        backend:
          service:
            name: frontend-tasks
            port: 
              number: 80
